--- a/src/components/Home/Projects/Projects.css
+++ b/src/components/Home/Projects/Projects.css
@@ -1,6 +1,93 @@
-.background{
-    background: linear-gradient(rgba(109, 108, 108, 0.5), rgba(238, 232, 232, 0.5)), url('../../../images/canvas-slate.jpg');
-    border-radius: 15px;
-    color: white;
-  
+
+.Projects .card {
+    background-color: #f7ead4de;
+    color: black;
+}
+
+.Projects .btn {
+    text-transform: uppercase;
+    font-weight: 400;
+    font-size: 16px;
+    margin-bottom: 5px;
+    color: #FFFFFF;
+    border: 1px solid #FFFFFF;
+}
+
+.Projects .btn:hover {
+    text-decoration: none;
+    font-size: 16px;
+    color: #f3c623;
+    border: 1px solid #f3c623;
+}
+
+.Projects .header h2 {
+    font-size: 35px;
+}
+
+.Projects .header span {
+    color: #f3c623;
+}
+
+.Projects p {
+    font-size: 16px;
+}
+
+
+.Projects .technology span {
+    display: inline-block;
+    margin: 3px 0;
+    border-radius: 3px;
+    padding: 3px 10px;
+    font-size: 13px;
+    border: 1px solid #f3c623;
+}
+
+.Projects .fab,
+.Projects .fas {
+    font-size: 25px;
+    color: #FFFFFF;
+}
+
+.Projects .fab:hover,
+.Projects .fas:hover {
+    color: #f3c623;
+}
+
+.Projects .wrapper
+{
+	padding-bottom: 50px;
+}
+
+.Projects .divider
+{
+	position: relative;
+	margin-top: 30px;
+	height: 1px;
+}
+
+.Projects .div-transparent:before
+{
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 25%;
+	right: 25%;
+	width: 50%;
+	height: 1px;
+	background: #fff;
+}
+
+.Projects .div-dot:after
+{
+	content: "";
+	position: absolute;
+	z-index: 1;
+	top: -5px;
+	left: calc(50% - 5px);
+	width: 12px;
+	height: 12px;
+	background-color: #f3c623;
+    border-radius: 50%;
+    box-shadow: inset 0 0 0 2px#1D1D1D,
+					0 0 0 10px #1D1D1D;
 }
